test_suite/tests/ui/borrow/wrong_lifetime.stderr
error: field `s` does not have lifetime 'b
 --> $DIR/wrong_lifetime.rs:6:5
  |
6 | /     #[serde(borrow = "'b")]
7 | |     s: &'a str,
  | |______________^

error: aborting due to previous error

